--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@tanstack/react-query-devtools": "^5.59.15",
-    "axios": "^1.7.7",
     "i": "^0.3.7",
     "npm": "^10.9.0",
     "rc-slider": "^11.1.7",
@@ -32,14 +32,18 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.4",
+    "axios": "^1.7.9",
     "babel-jest": "^29.7.0",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "happy-dom": "^15.11.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "vite": "^5.4.1"
+    "msw": "^2.7.0",
+    "vite": "^5.4.1",
+    "vitest": "^2.1.8"
   }
 }
